Updating slides link

--- a/index.html
+++ b/index.html
@@ -151,10 +151,7 @@
 											<h4>
 												<ul>
 													<li>
-														Monday/Wednesday 3:30PM - 5PM, Friday 3:30PM - 5PM Pfhaler 106
-													</li>
-													<li>
-														Tuesday 7PM - 9PM virtually, by appointment (appointment e-mails will be sent weekly on Monday nights)
+														Monday/Wednesday/Friday 3:30PM - 5PM, Pfahler Hall, 106 
 													</li>
 												</ul>
 											</h4>
@@ -451,7 +448,7 @@
 
 <!-- Begin Schedule -->
 <tr><td colspan = "5"><h2><b><a name = "timedomain">Unit 1: Time Domain Audio Processing</a></b></h2><p>We will begin our foray into digital audio processing by thinking of audio as a big, long 1D array.  Under typical conditions, we have 44100 elements for every second of audio.  This means we have nearly a million elements in our arrays for only 20 seconds of audio!  We'll also see that the elements of this array, known as "audio samples," are a bit of a mess, but we'll be able to do a surprising amount by manipulating the samples, and we'll be able to create some cool sounds by synthesizing samples from equations.  Students will also get more comfortable with python and numpy in the stage of the course.</p></td></tr>
-<tr><td>1</td><td>Wed 1/22/2025</td><td>Course Overview, Sneak Preview, Digital Audio Representations</td><td><ul><li><a href = "https://docs.google.com/presentation/d/1iGzlfXFMncoEZ0IIRhtumJZHFwEgrdSW-C8RH6GsBrc/edit?usp=share_link">Slides from today</a></li><li><a href = "ClassExercises/Week1/Week1_AudioReverseGame">Audio Reverse Game</a></li></ul></td><td></td></tr>
+<tr><td>1</td><td>Wed 1/22/2025</td><td>Course Overview, Sneak Preview, Digital Audio Representations</td><td><ul><li><a href = "https://docs.google.com/presentation/d/1ZCVGhQweUCB8a_h9R-X4ZE5U4cVLXLcl1bUhcM91woY/edit?usp=sharing">Slides from today</a></li><li><a href = "ClassExercises/Week1/Week1_AudioReverseGame">Audio Reverse Game</a></li></ul></td><td></td></tr>
 <tr><td></td><td>Thu 1/23/2025</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/Survey">Survey</a> and <a href = "https://ursinus.instructure.com/courses/15546/quizzes/21549">syllabus quiz</a> due by 11:59PM
 </td></tr><tr><td>2</td><td>Fri 1/24/2025</td><td>Python/Numpy Basics, Slicing/Reversing Audio, Sinusoids/Pitch</td><td><ul><a href = "https://donsheehy.github.io/datastructures/fullbook.pdf">Sheehy</a> Ch. 2 for python intro</li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module1/Video0">Module 1: Python Basics</a> Due by 11:59 PM
 </td></tr>
@@ -492,7 +489,7 @@
 </td></tr>
 <tr><td>18</td><td>Mon 3/3/2025</td><td>Inverse Complex DFT/STFT, Vocoder Concept, Phase Retrieval</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing / Inverse Complex DFT</a> Due Before Class
 </td></tr>
-<tr><td>19</td><td>Wed 3/5/2025</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a> Due Before Class
+<tr><td>19</td><td>Wed 3/5/2025</td><td>Convolution/multiplication duality, FFTConvolve</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a> Due Before Class
 </td></tr>
 <tr><td>20</td><td>Fri 3/7/2025</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td><ul><li><a href = "https://learningsynths.ableton.com/filters/filters-in-the-real-world">Ableton: Filters in The Real World</a></li></ul></td><td bgcolor=#f4e6e7>Assignment 3 Submission 1 Due
 </td></tr>
@@ -518,8 +515,7 @@
 <tr><td></td><td>Tue 4/1/2025</td><td></td><td></td><td bgcolor=#f4e6e7>HW4 Part 1 Due
 </td></tr><tr><td>28</td><td>Wed 4/2/2025</td><td>Harmonic-Percussive Source Separation, Matrix Multiplication for Audio Activations</td><td><ul><li><a href = "../Modules/Module18/Video0">Class notes on HPSS</a></li><li><a href = "https://www.researchgate.net/profile/Derry-Fitzgerald/publication/254583990_HarmonicPercussive_Separation_using_Median_Filtering/links/00b495396ef03235af000000/Harmonic-Percussive-Separation-using-Median-Filtering.pdf">FitzGerald 2010 Paper</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module18/Video0">Module 18: Matrix Activations for Spectral Decompositions</a> Due Before Class
 </td></tr>
-<tr><td>29</td><td>Fri 4/4/2025</td><td>Source Separation via Nonnegative matrix factorization (NMF)</td><td><ul><li><a href = "ClassExercises/Week10/Week10_NMF">Class Notes on NMF</a></li><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td bgcolor=#f4e6e7>Module 18.5: Linear Predictive Coding (LPC) Due Before Class
-</td></tr>
+<tr><td>29</td><td>Fri 4/4/2025</td><td>Source Separation via Nonnegative matrix factorization (NMF)</td><td><ul><li><a href = "ClassExercises/Week10/Week10_NMF">Class Notes on NMF</a></li><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
 <tr><td>30</td><td>Mon 4/7/2025</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Our Python Implementation of Shazam</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td bgcolor=#f4e6e7>HW4 Due
 <HR>HW5: The Concatenator Out
 </td></tr>
