--- a/ClassExercises/Week7/Week7_STFTNoiseShaping/index.html
+++ b/ClassExercises/Week7/Week7_STFTNoiseShaping/index.html
@@ -185,6 +185,7 @@
 										</li>
 										<li><a href = "../../../Software/index.html">Software</a></li>
 										<li><a href = "../../../../webaudio-pianoroll/index.html">Piano Roll Editor</a></li>
+										<li><a href = "https://calebj0seph.github.io/spectro/">Live Spectrogram Viewer</a></li>
 										<li><a href = "../../../index.html#schedule">Schedule</a></li>
                                         <li>
 											<span class="opener">Assignments</span>
