Musical statements for HW1!

--- a/Assignments/HW1_RissetBeats/index.html
+++ b/Assignments/HW1_RissetBeats/index.html
@@ -329,7 +329,7 @@
 
 										<h4>Your Task</h4>
 										<p>
-											Fill in the method <code>do_risset_fast</code> to implement the above ideas.  Don't forget that you still need to add in all of the frequencies for each note to make a beat!  It's just that each one of these frequencies will be repeated each time you repeat the note, so you'll save by only having to have a sine and a cosine for each one.
+											Fill in the method <code>do_risset_fast</code> to implement the above ideas.  Don't forget that you still need to add in all of the frequencies for each note to make a beat!  It's just that each one of these frequencies will be repeated each time you repeat the note, so you'll save by only having to have a sine and a cosine for each frequency.
 										</p>
 
 										<p>
@@ -479,11 +479,11 @@
 											<ul>
 												<li>
 													<a href = "../../Assignments/HW1_RissetBeats">HW1: Risset Beats</a>
-													<!--<ul>
+													<ul>
 														<li>
 															<a href = "../../Assignments/HW1_RissetBeats/statements.html">Musical Statements</a>
 														</li>
-													</ul>!-->
+													</ul>
 												</li>
 												<li><a href = "../../Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
 												<!--<ul>
