--- a/Assignments/HW1_RissetBeats/statements.html
+++ b/Assignments/HW1_RissetBeats/statements.html
@@ -66,7 +66,7 @@
 										</audio> 
 
 										<HR>
-										<h2>"Statement + Statement b"</h2>
+										<h2>"Labyrinth"</h2>
 										<h3>by Adrian</h3>
 
 										<audio controls>
