--- a/Assignments/HW2_DigitalInstruments/index.html
+++ b/Assignments/HW2_DigitalInstruments/index.html
@@ -461,7 +461,7 @@
 
 										<h3><a name = "bell">Bell Notes</a> (3 Points)</h3>
 										<p>
-											Fill in the method <code>fm_bell_note</code> to make a note that sounds like a struck bell.  This method is very similar to the <code>fm_plucked_string_note</code> method, but the parameters make all the difference.  In particular, you should use an exponential envelope with a &mu; of 0.8 for both the amplitude and modulation envelope, and you should use a modulation frequency ratio of 1.4 to create inharmonic sounds characteristic of a bell.  Finally, you should use a modulation index <code>I</code> of 2.  Assuming this is all working properly, here's some code you can run
+											Fill in the method <code>fm_bell_note</code> to make a note that sounds like a struck bell.  This method is very similar to the <code>fm_plucked_string_note</code> method, but the parameters make all the difference.  In particular, you should use an exponential envelope with a decay factor &mu; of 0.8 for both the amplitude and modulation envelope, and you should use a modulation frequency ratio of 1.4 to create inharmonic sounds characteristic of a bell.  Finally, you should use a modulation index <code>I</code> of 2.  Assuming this is all working properly, here's some code you can run
 										</p>
 
 										<script type="syntaxhighlighter" class="brush: py"><![CDATA[
