--- a/Assignments/HW1_RissetBeats/statements.html
+++ b/Assignments/HW1_RissetBeats/statements.html
@@ -57,7 +57,7 @@
 										  </audio> 
 
 										<HR>
-										<h2>"Caps Lock"</h2>
+										<h2>"cAPS lOCK"</h2>
 										<h3>by Sam</h3>
 
 										<audio controls>
