Putting up musical statements for HW2

--- a/Assignments/HW2_DigitalInstruments/statements.html
+++ b/Assignments/HW2_DigitalInstruments/statements.html
@@ -46,210 +46,128 @@
 									</header>
 
 									<div id="page-content">
-										<h2>"Funky Horn"</h2>
-										<h3>by Josh</h3>
-
-										<audio controls>
-											<source src="statements/funkyhorn.wav" type="audio/wav">
-										  Your browser does not support the audio element.
-										  </audio> 
-
-
-										<HR>
-										<h2>"Dichrome"</h2>
-										<h3>by not shark</h3>
-
+										<h2>SONG ("AAAAAAAAAAA")</h2>
+										<h3>by Sam</h3>
 										<p>
-										I had a tune in my head which I know as "Monochrome."
-										I used the Piano Roll Editor to put down a bunch of notes
-										Without listening to what I had made until it was done, I tried to put down roughly what I thought it might sound like if it were to be visualized
-										What came out was unqiue enough, so I renamed it to "Dichrome"
+											AAAAAAAAAA is the result after some editing in ableton + a drum track.
 										</p>
 
 										<audio controls>
-											<source src="statements/Dichrome.mp3" type="audio/mp3">
-											Your browser does not support the audio element.
-											</audio> 
+											<source src="statements/AAAAAAAAAAA.m4a" type="audio/wav">
+										  Your browser does not support the audio element.
+										  </audio> 
 
 										<HR>
-										<h2>"Ben"</h2>
-										<h3>by Ben</h3>
+										<h2>Polyprismatic</h2>
+										<h3>by Nacre</h3>
 
 										<audio controls>
-											<source src="statements/ben.mp3" type="audio/mp3">
-											Your browser does not support the audio element.
-											</audio> 
+											<source src="statements/WIP4.mp3" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
 
 										<HR>
-											<h2>"Descent Into Madness"</h2>
-											<h3>by Mike E</h3>
-	
-											<audio controls>
-												<source src="statements/descent.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h2>Remix!!</h2>
+										<h3>by Ty</h3>
+
+										<audio controls>
+											<source src="statements/remix.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
 
 										<HR>
-											<h2>"Random Notes"</h2>
-											<h3>by Dylan</h3>
-	
-											<audio controls>
-												<source src="statements/RandomNotes.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h2>Messing with Drums</h2>
+										<h3>by Jeff</h3>
+
+										<audio controls>
+											<source src="statements/MessingWithDrums.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
 
 										<HR>
-											<h2>"Star Wars"</h2>
-											<h3>by Abby</h3>
-	
-											<audio controls>
-												<source src="statements/starwars.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h2>Cole's Funk</h2>
+										<h3>by Cole</h3>
 
-										<HR>
-											<h2>"2099"</h2>
-											<h3>by CS477GuruF2023</h3>
-	
-											<audio controls>
-												<source src="statements/2099.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-			
-										<HR>
-											<h2>"Age of Worry"</h2>
-											<h3>by John Mayer</h3>
-	
-											<audio controls>
-												<source src="statements/jm_ageofworry.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Pokemon Theme Song"</h2>
-											<h3>by Hannah Jeffers</h3>
-	
-											<audio controls>
-												<source src="statements/pokemonthemesong.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<audio controls>
+											<source src="statements/ColesFunk.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
 
 
 										<HR>
-											<h2>"The Clown Show"</h2>
-											<h3>by David</h3>
-	
-											<audio controls>
-												<source src="statements/mycombosong.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h2>Chilling guy do something :V</h2>
+										<h3>by Khoi Nguyen</h3>
 
+										<h4>Khoi Dirty Bass</h4>
+										<audio controls>
+											<source src="statements/khoidirtybass.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
+										<p>
+											<img src = "statements/khoidirtybass.png" width="50%">
+										</p>
 
-										<HR>
-											<h2>"Shark"</h2>
-											<h3>by Shark</h3>
-	
-											<audio controls>
-												<source src="statements/shark.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h4>Bruno Mars "Die with A Smile" Vibrato Karplus Strong</h4>
+										<audio controls>
+											<source src="statements/BrunoMars_DieWithASmile.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
 
-										<!--
-										<HR>
-											<h2>"Ultimate Guitar Solo"</h2>
-											<h3>by Jeremy</h3>
-	
-											<audio controls>
-												<source src="statements/ultimateguitar.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-										-->
-	
-										<HR>
-											<h2>"Bomberger Bells"</h2>
-											<h3>by Emily Musgrove</h3>
-	
-											<audio controls>
-												<source src="statements/MaryHadALittleLambFM.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h4>Pictures At An Exhibition with Sawtooth Envelope And Snare</h4>
+										<audio controls>
+											<source src="statements/pictures_sawtooth.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
 
-										<HR>
-											<h2>"Industry Baby"</h2>
-											<h3>by Brenden</h3>
-
-											<p>
-												My musical statement is a recreation of the catchy trumpet parts from Industry Baby by Lil Nas X. It is composed of two different trumpets and a snare.
-											</p>
-	
-											<audio controls>
-												<source src="statements/Industry_Baby.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Alien Theme"</h2>
-											<h3>by A</h3>
-	
-											<audio controls>
-												<source src="statements/AlienTheme.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Clack Quack Sound"</h2>
-											<h3>by Anonymous</h3>
-	
-											<audio controls>
-												<source src="statements/ClackQuacksound.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Missy Drum Duo"</h2>
-											<h3>by Tom Snipes</h3>
-	
-											<audio controls>
-												<source src="statements/missy.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-
-										<HR>
-											<h2>"Arcade Game Over"</h2>
-											<h3>by Panda</h3>
-	
-											<audio controls>
-												<source src="statements/MusicStatementJL.wav" type="audio/wav">
-												Your browser does not support the audio element.
-												</audio> 
 
 
 										<HR>
-											<h2>"In A Rush?"</h2>
-											<h3>by Ian</h3>
-	
-											<audio controls>
-												<source src="statements/missy.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h2>Quiet And Loud</h2>
+										<h3>by Zach</h3>
+
+										<audio controls>
+											<source src="statements/QuietAndLoud.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
 
 										<HR>
-											<h2>"Doctor Who Theme"</h2>
-											<h3>by James</h3>
-	
-											<audio controls>
-												<source src="statements/DWThemeMixed.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
-												
+										<h2>Sweet Bells</h2>
+										<h3>by Jon Pritchard</h3>
+
+										<audio controls>
+											<source src="statements/SweetBells.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
+
+
 										<HR>
-											<h2>"Scary"</h2>
-											<h3>by Anonymous</h3>
-	
-											<audio controls>
-												<source src="statements/scary.mp3" type="audio/mp3">
-												Your browser does not support the audio element.
-												</audio> 
+										<h2>Gravity Falls</h2>
+										<h3>by Pat Ryan</h3>
+
+										<audio controls>
+											<source src="statements/GravityFalls.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
+
+										<HR>
+										<h2>Catchy Jingle</h2>
+										<h3>by Mia</h3>
+
+										<audio controls>
+											<source src="statements/jingle.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
+
+
+										<HR>
+										<h2>Time Sev</h2>
+										<h3>by Aleni</h3>
+
+										<audio controls>
+											<source src="statements/sev.m4a" type="audio/wav">
+										Your browser does not support the audio element.
+										</audio> 
+
                                 </div>
 						</div>
 					</div>
@@ -308,11 +226,11 @@
 													</ul>
 												</li>
 												<li><a href = "../../Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
-												<!--<ul>
+												<ul>
 													<li>
 														<a href = "../../Assignments/HW2_DigitalInstruments/statements.html">Musical Statements</a>
 													</li>
-												</ul>!-->
+												</ul>
 												</li>
 												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												<!--<ul>
