--- a/ClassExercises/Week10/Week10_Chroma/index.html
+++ b/ClassExercises/Week10/Week10_Chroma/index.html
@@ -295,7 +295,7 @@
 												<li><a href = "../../../../Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a></li>
 												<li><a href = "../../../../Modules/Module13/Video1.html">Module 13: Aliasing, Inverse DFT</a></li>
 												<li><a href = "../../../../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
-												<li><a href = "../../../../Modules/Module15/Video0">Module 15: The Z Transform</a></li>
+												<li><a href = "../../../../Modules/Module15/Video0">Module 15: The Z Transform And Linear Predictive Coding</a></li>
 												<li><a href = "../../../../Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
 												<li><a href = "../../../../Modules/Module17/Video0">Module 17: Sonifying Mel And Chroma Filterbanks</a></li>
 												<li><a href = "../../../../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
