Broken link for griffin-lim

--- a/Assignments/HW3_Vocoders/index.html
+++ b/Assignments/HW3_Vocoders/index.html
@@ -405,7 +405,7 @@
 										<h2><a name = "griffinlim">The Griffin-Lim Algorithm (8 Points)</a></h2>
 
 										<p>
-											The earliest algorithm for phase retrieval was devised by Daniel Griffin and Jae Lim in 1984, in the <a href = "https://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.331.7151&rep=rep1&type=pdf">following paper</a>.  The idea is to perform an iterative procedure where the amplitudes are fixed but where the phases are slowly adjusted.  Let's say we start with a magnitude-only spectrogram <b>SAbs</b>.  Then the iterations of Griffin-Lim are as follows:
+											The earliest algorithm for phase retrieval was devised by Daniel Griffin and Jae Lim in 1984, in the <a href = "http://dub.ucsd.edu/CATbox/Reader/GriffinLimMSTFT.pdf">following paper</a>.  The idea is to perform an iterative procedure where the amplitudes are fixed but where the phases are slowly adjusted.  Let's say we start with a magnitude-only spectrogram <b>SAbs</b>.  Then the iterations of Griffin-Lim are as follows:
 										</p>
 
 										<ol>
