--- a/index.html
+++ b/index.html
@@ -497,10 +497,11 @@
 <tr><td>--</td><td>Mon 3/10/2025</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>--</td><td>Wed 3/12/2025</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>--</td><td>Fri 3/14/2025</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
-<tr><td>21</td><td>Mon 3/17/2025</td><td>LPC, Autoregressive Coding, LPC-Based Cross-Synthesis<p>Begin Audio Novelty (continue after midterm)</p></td><td><ul><li><a href = "https://ccrma.stanford.edu/~hskim08/lpc/">Hyunk-Suk Kim's Notes on Linear Predictive Coding</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module15/Video0">Module 15: Z-Transform And Linear Predictive Coding</a> Due Before Class
+<tr><td>21</td><td>Mon 3/17/2025</td><td>DFT-Based Filter Design, Infinite Impulse Response (IIR) Filters</p></td><td><ul><li><a href = "https://demonstrations.wolfram.com/DigitalIIRFilterDesignShowingPolesAndZeros">Wolfram Demo on IIR Filter Design with Poles/Zeroes</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module15/Video0">Module 15: Z-Transform Part 1</a> Due Before Class
 </td></tr>
-<tr><td>22</td><td>Wed 3/19/2025</td><td><b>Midterm Exam on Units 1/2</b></td><td></td><td></td></tr>
 <tr><td colspan = "5"><h2><b><a name = "classical">Unit 3: Classical Algorithms For Digital Music Processing</a></b></h2><p>Now that we have frequency domain tools down, we're going to build things on top of it to address a wide variety of higher level problems, including: <ul><li>Tempo estimation and beat tracking</li><li>Fundamental frequency tracking</li><li>The "Shazam algorithm" for audio fingerprinting</li><li>Segment boundary detection in music</li><li>Cross-version comparison and time warping</li><li>"Un-mixing" audio, or separating audio into its tracks</li></ul>All of these problems can be accomplished with straightforward mathematical algorithms built on top of the Short-Time Fourier Transform (STFT).</p></td></tr>
+<tr><td>22</td><td>Wed 3/19/2025</td><td>Linear Predictive Coding (LPC)</td><td><ul><li><a href = "https://ccrma.stanford.edu/~hskim08/lpc/">Hyunk-Suk Kim's Notes on Linear Predictive Coding</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module15/Video4">Module 15: Z-Transform Part 2</a> Due Before Class
+</td></tr>
 <tr><td>23</td><td>Fri 3/21/2025</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video0">Module 16: Exercise 1 Audio Onsets/Offsets</a> Due Before Class
 <HR>Assignment 3 Submission 2 Due
 <HR>HW4: Tempo Estimation And Beat Tracking Out
